--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^3.2.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
