--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@types/numeral": "^2.0.2",
+    "crypto": "^1.0.1",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^6.3.3",
     "next": "latest",
+    "numeral": "^2.0.6",
+    "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
