--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@types/numeral": "^2.0.2",
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
     "crypto": "^1.0.1",
     "emotion-theming": "^11.0.0",
