--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@reach/router": "^1.3.4",
+    "@terra-money/terra.js": "^3.1.2",
     "@types/numeral": "^2.0.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
@@ -28,6 +30,7 @@
     "react-multi-carousel": "^2.8.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^3.2.0",
+    "react-toastify": "^9.0.2",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
