--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/react": "^2.0.2",
+    "@choc-ui/paginator": "^3.4.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@types/numeral": "^2.0.2",
@@ -28,6 +29,7 @@
     "react-multi-carousel": "^2.8.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^3.2.0",
+    "react-toastify": "^9.0.3",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
