--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "@chakra-ui/icons": "^2.0.1",
     "@chakra-ui/react": "^2.0.2",
     "@choc-ui/paginator": "^3.4.0",
+    "@cosmjs/cosmwasm-stargate": "^0",
+    "@cosmjs/encoding": "^0",
+    "@cosmjs/math": "^0",
+    "@cosmjs/proto-signing": "^0",
+    "@cosmjs/stargate": "^0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@keplr-wallet/cosmos": "^0.9.16",
     "@reach/router": "^1.3.4",
-    "@terra-money/terra.js": "^3.1.2",
     "@types/numeral": "^2.0.2",
+    "@walletconnect/client": "^1.7.8",
+    "@walletconnect/qrcode-modal": "^1.7.8",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "crypto": "^1.0.1",
     "emotion-theming": "^11.0.0",
+    "ethers": "^5.6.8",
     "framer-motion": "^6.3.3",
     "next": "latest",
     "numeral": "^2.0.6",
@@ -32,11 +40,11 @@
     "react-multi-carousel": "^2.8.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^3.2.0",
-
     "react-signature-canvas": "^1.0.5",
     "react-toastify": "^9.0.3",
-
-    "typescript": "^4.3.2"
+    "react-tracked": "^1.7.9",
+    "typescript": "^4.3.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
