fix package version|

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@chakra-ui/icons": "^2.0.1",
     "@chakra-ui/react": "^2.0.2",
     "@choc-ui/paginator": "^3.4.0",
-    "@cosmjs/cosmwasm-stargate": "^0",
-    "@cosmjs/encoding": "^0",
-    "@cosmjs/math": "^0",
-    "@cosmjs/proto-signing": "^0",
-    "@cosmjs/stargate": "^0",
+    "@cosmjs/cosmwasm-stargate": "0.28.4",
+    "@cosmjs/encoding": "0.28.4",
+    "@cosmjs/math": "0.28.4",
+    "@cosmjs/proto-signing": "0.28.4",
+    "@cosmjs/stargate": "0.28.4",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@keplr-wallet/cosmos": "^0.9.16",
