--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@keplr-wallet/cosmos": "^0.9.16",
     "@reach/router": "^1.3.4",
     "@types/numeral": "^2.0.2",
+    "@types/pdfjs-dist": "^2.10.378",
+    "@types/react-pdf": "^5.7.2",
     "@walletconnect/client": "^1.7.8",
     "@walletconnect/qrcode-modal": "^1.7.8",
     "@walletconnect/web3-provider": "^1.7.8",
@@ -38,6 +40,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^3.2.0",
     "react-signature-canvas": "^1.0.5",
