--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^6.3.3",
     "next": "latest",
     "numeral": "^2.0.6",
+    "pdf-lib": "^1.17.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
@@ -46,6 +47,7 @@
     "react-signature-canvas": "^1.0.5",
     "react-toastify": "^9.0.3",
     "react-tracked": "^1.7.9",
+    "serverless-mysql": "^1.5.4",
     "typescript": "^4.3.2",
     "web3": "^1.7.3",
     "web3modal": "^1.9.7",
