--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@walletconnect/web3-provider": "^1.7.8",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
     "crypto": "^1.0.1",
     "emotion-theming": "^11.0.0",
     "ethers": "^5.6.8",
     "framer-motion": "^6.3.3",
+    "near-api-js": "^0.45.1",
     "next": "latest",
     "numeral": "^2.0.6",
     "pdf-lib": "^1.17.1",
