--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@cosmjs/math": "0.28.4",
     "@cosmjs/proto-signing": "0.28.4",
     "@cosmjs/stargate": "0.28.4",
+    "@elrondnetwork/erdjs-web-wallet-provider": "^2.1.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@keplr-wallet/cosmos": "^0.9.16",
