--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@emotion/styled": "^11.8.1",
     "@keplr-wallet/cosmos": "^0.9.16",
     "@reach/router": "^1.3.4",
+    "@react-buddy/ide-toolbox": "^2.2.0",
+    "@react-buddy/palette-chakra-ui": "^2.1.0",
     "@types/numeral": "^2.0.2",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react-pdf": "^5.7.2",
