--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reach/router": "^1.3.4",
     "@react-buddy/ide-toolbox": "^2.2.0",
     "@react-buddy/palette-chakra-ui": "^2.1.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/numeral": "^2.0.2",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react-pdf": "^5.7.2",
