--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@walletconnect/client": "^1.7.8",
     "@walletconnect/qrcode-modal": "^1.7.8",
     "@walletconnect/web3-provider": "^1.7.8",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.2",
