--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-buddy/ide-toolbox": "^2.2.0",
     "@react-buddy/palette-chakra-ui": "^2.1.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/formidable": "^2.0.5",
     "@types/numeral": "^2.0.2",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react-pdf": "^5.7.2",
@@ -40,6 +41,7 @@
     "crypto": "^1.0.1",
     "emotion-theming": "^11.0.0",
     "ethers": "^5.6.8",
+    "formidable": "^2.0.1",
     "framer-motion": "^6.3.3",
     "near-api-js": "^0.45.1",
     "next": "latest",
