--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.0",
     "react-pdf": "^5.7.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^3.2.0",
     "react-signature-canvas": "^1.0.5",
