--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext",
+    "typeRoots": ["./types", "./node_modules/@types"],
     "incremental": true
   },
   "exclude": [
