--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "crypto": "^1.0.1",
     "emotion-theming": "^11.0.0",
     "ethers": "^5.6.8",
+    "fade": "^0.2.0",
     "formidable": "^2.0.1",
     "framer-motion": "^6.3.3",
     "near-api-js": "^0.45.1",
