--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reach/router": "^1.3.4",
     "@react-buddy/ide-toolbox": "^2.2.0",
     "@react-buddy/palette-chakra-ui": "^2.1.0",
+    "@routerprotocol/router-js-sdk": "^0.1.5",
     "@types/crypto-js": "^4.1.1",
     "@types/formidable": "^2.0.5",
     "@types/numeral": "^2.0.2",
