--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@keplr-wallet/cosmos": "^0.9.16",
+    "@oasisprotocol/sapphire-paratime": "workspace:^",
     "@reach/router": "^1.3.4",
     "@react-buddy/ide-toolbox": "^2.2.0",
     "@react-buddy/palette-chakra-ui": "^2.1.0",
